--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -7,7 +7,9 @@
   "license": "ISC",
   "dependencies": {
     "react": "^18.2.0",
-    "@types/react": "^18.0.26",
     "next": "^13.1.6"
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.26"
   }
 }
