--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -4,9 +4,5 @@
   "description": "",
   "main": "index.ts",
   "author": "RyDVi (Ryabchunov Dmitry)",
-  "license": "ISC",
-  "dependencies": {
-    "react": "^18.2.0",
-    "@types/react": "^18.0.26"
-  }
+  "license": "ISC"
 }
