--- a/packages/videoplayer/package.json
+++ b/packages/videoplayer/package.json
@@ -6,7 +6,9 @@
   "author": "RyDVi (Ryabchunov Dmitry)",
   "license": "ISC",
   "dependencies": {
-    "react": "^18.2.0",
+    "react": "^18.2.0"
+  },
+  "devDependencies": {
     "@types/react": "^18.0.26"
   }
 }
