--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -22,7 +22,8 @@
     "cookies-next": "^2.1.1",
     "ramda": "^0.28.0",
     "static-path": "^0.0.4",
-    "swr": "^2.0.0"
+    "swr": "^2.0.0",
+    "@modules/theme": "*"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
