--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -7,7 +7,8 @@
   "license": "ISC",
   "dependencies": {
     "@modules/utils": "*",
-    "react": "^18.2.0"
+    "react": "^18.2.0",
+    "use-local-storage": "^2.3.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.26"
