--- a/turbo.json
+++ b/turbo.json
@@ -1,9 +1,11 @@
 {
   "$schema": "https://turbo.build/schema.json",
   "globalDependencies": ["**/.env.*local"],
+  "globalEnv": ["NEXT_PUBLIC_SERVER_URL"],
   "pipeline": {
     "build": {
       "dependsOn": ["^build"],
+      "env": ["NEXT_PUBLIC_SERVER_URL"],
       "outputs": ["dist/**", ".next/**"]
     },
     "lint": {
