--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -22,13 +22,9 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.1",
     "@next/font": "^13.1.1",
-    "cookies-next": "^2.1.1",
     "ramda": "^0.28.0",
     "static-path": "^0.0.4",
-    "swr": "^2.0.0",
-    "@modules/theme": "*",
-    "@modules/stores": "*",
-    "@modules/request-hooks": "*"
+    "swr": "^2.0.0"
   },
   "devDependencies": {
     "tsconfig": "*",
