--- a/apps/client/tsconfig.json
+++ b/apps/client/tsconfig.json
@@ -1,7 +1,10 @@
 {
   "extends": "tsconfig/nextjs.json",
   "compilerOptions": {
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "paths": {
+      "src/*": ["./src/*"]
+    }
   },
   "include": [
     "src",
