--- a/apps/crm/tsconfig.json
+++ b/apps/crm/tsconfig.json
@@ -1,6 +1,12 @@
 {
   "extends": "tsconfig/nextjs.json",
+  "compilerOptions": {
+    "paths": {
+      "src/*": ["./src/*"]
+    }
+  },
   "include": [
+    "src",
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx"
