--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -25,7 +25,7 @@
     "ramda": "^0.28.0",
     "static-path": "^0.0.4",
     "swr": "^2.0.0",
-    "@modules/request-hooks": "*",
+    "@modules/axios-hooks": "*",
     "@modules/api": "*",
     "@modules/stores": "*"
   },
