--- a/apps/crm/package.json
+++ b/apps/crm/package.json
@@ -26,7 +26,7 @@
     "static-path": "^0.0.4",
     "swr": "^2.0.0",
     "@modules/theme": "*",
-    "@modules/request-hooks":"*",
+    "@modules/axios-hooks":"*",
     "@modules/api":"*"
   },
   "devDependencies": {
