--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -25,9 +25,9 @@
     "ramda": "^0.28.0",
     "static-path": "^0.0.4",
     "swr": "^2.0.0",
-    "@modules/axios-hooks": "*",
     "@modules/api": "*",
-    "@modules/stores": "*"
+    "@modules/stores": "*",
+    "@modules/axios-hooks": "*"
   },
   "devDependencies": {
     "tsconfig": "*",
